tests/typing/errors/repeated_record_field/error.expected
File "tests/typing/errors/repeated_record_field/error.ae", line 5, character 19-46:
5 |   forall x:t . x = { foo = true; foo = false }
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error The field foo is used more than once in this record construction
